--- a/projetoAcademia/projetoAcademia.csproj
+++ b/projetoAcademia/projetoAcademia.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="Academia.cs" />
     <Compile Include="Aluno.cs" />
+    <Compile Include="AlunoDB.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="FormAcademia.cs">
       <SubType>Form</SubType>
