--- a/projetoAcademia/projetoAcademia.csproj
+++ b/projetoAcademia/projetoAcademia.csproj
@@ -83,6 +83,12 @@
     <Compile Include="FormCadastroAluno.Designer.cs">
       <DependentUpon>FormCadastroAluno.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPesquisa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPesquisa.Designer.cs">
+      <DependentUpon>FormPesquisa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAcademia.resx">
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormCadastroAluno.resx">
       <DependentUpon>FormCadastroAluno.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPesquisa.resx">
+      <DependentUpon>FormPesquisa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
